fix vertical alignment of carousel spinner

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -306,6 +306,8 @@ body.modal-open {
           right: 0;
           left: 0;
           margin: auto;
+          max-width: 100%;
+          max-height: 100%;
         }
       }
     }
